# csp-pi-gpio

./: .gitignore  .gitmodules  Readme.md  build  configure  install  meson.build
include/: gpio.h  hooks.h  param_config.h  vmem_config.h
src/: gpio.c  hooks.c  main.c  param_config.c
